--- a/public/index.html
+++ b/public/index.html
@@ -9,18 +9,7 @@
       name="description"
       content="株式会社MOEが運営するゲーム「Master of Epic」のステータス計算シミュレーターです"
     />
-    <!-- <meta name="google-site-verification" content="S4XUGJEzhLIV1u2hPFZfoJ2V_ZXCpy7g7kxAbnrEmQw" /> -->
-    <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8645483785265153" crossorigin="anonymous"></script> -->
-    <!-- <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'G-70BFGJ7TV2');
-    </script> -->
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-70BFGJ7TV2"></script> -->
-    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
+    <meta name="google-site-verification" content="HrKY5rUWVShijGaGfynbxQnuXHJFFx3JieHsW9YkBg4" />
     <link rel="manifest" href="manifest.json" />
     <title>Master of Epic ステータスシミュレーター</title>
   </head>
