タイトル決定 とそれに応じてファビコン修正

--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="株式会社MOEが運営するゲーム「Master of Epic」のステータス計算シミュレーターです"
+      content="株式会社MOE が運営するゲーム「Master of Epic」の装備やバフなどからステータスを計算シミュレーターです"
     />
     <meta name="google-site-verification" content="HrKY5rUWVShijGaGfynbxQnuXHJFFx3JieHsW9YkBg4" />
     <link rel="manifest" href="manifest.json" />
-    <title>Master of Epic ステータスシミュレーター</title>
+    <title>もえすて - Master of Epic ステータスシミュレーター</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
