ページの説明文修正

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="株式会社MOE が運営するゲーム「Master of Epic」の装備やバフなどからステータスを計算シミュレーターです"
+      content="ステータスシミュレーター「もえすて」は、株式会社MOE が運営するゲーム「Master of Epic」にて、装備、スキル値、バフを元にステータスを計算するツールです。"
     />
     <meta name="google-site-verification" content="HrKY5rUWVShijGaGfynbxQnuXHJFFx3JieHsW9YkBg4" />
     <link rel="manifest" href="manifest.json" />
