--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Cache-Control" content="no-cache">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="ステータスシミュレーター「もえすて」は、株式会社MOE が運営するゲーム「Master of Epic」にて、装備、スキル値、バフを元にステータスを計算するツールです。"
+      content="ステータスシミュレーター「もえすて」は、株式会社MOE が運営するゲーム「Master of Epic」の装備、スキル値、バフを元にステータスを計算するツールです。"
     />
     <meta name="google-site-verification" content="HrKY5rUWVShijGaGfynbxQnuXHJFFx3JieHsW9YkBg4" />
     <link rel="manifest" href="manifest.json" />
